# django_rest_auth

./: .bumpversion.cfg  .gitignore  MANIFEST.in  Makefile  README.md  fakerequirements.txt  gitignore  pyproject.toml
.github/workflows/: publish_pypi.yml
src/: __init__.py  requirements.txt
src/clinica/: __init__.py  admin.py  apps.py  sidebar.py
src/django_rest_auth/: admin.py  apps.py  base.py  decorators.py  middleware.py  models.py  permissions.py  serializers.py  services.py  signals.py  urls.py  views.py  viewsApi.py
src/django_rest_auth/classes/: FullPath.py  Translate.py
src/django_rest_auth/core/: conf.py
src/django_rest_auth/core/base/: models.py  permissions.py  serializers.py  views.py
src/django_rest_auth/core/middleware/: file_access.py  front_end.py  tenant.py
src/django_rest_auth/core/utils/: full_path.py  templates.py  translate.py  username.py
src/django_rest_auth/migrations/: 0001_initial.py
src/django_rest_auth/models/: audit_log.py  endereco.py  entidade.py  entidade_grupo.py  entidade_modulo.py  entidade_user.py  ficheiro.py  front_end.py  idioma.py  input.py  input_string.py  modulo.py  string.py  sucursal.py  sucursal_group.py  sucursal_user.py  sucursal_user_group.py  tipo_entidade.py  tipo_entidade_modulo.py  traducao.py  user.py  user_login.py
src/django_rest_auth/serializers/: entidade.py  ficherio.py  grupo.py  idioma.py  permission.py  sucursal.py  tipo_entidade.py  traducao.py  usuario.py
src/django_rest_auth/views/: auth.py  entidade.py  ficheiro.py  grupo.py  idioma.py  input.py  modelo.py  password.py  permission.py  register.py  string.py  sucursal.py  tipo_entidade.py  traducao.py  usuario.py  verify.py
src/django_saas/: admin.py  apps.py  sidebar.py  urls.py  view.py
src/django_saas/core/: signals.py
src/django_saas/core/base/: admin.py  models.py  permissions.py  registry.py  serializers.py  services.py  views.py
src/django_saas/core/middleware/: file_access.py  front_end.py  tenant.py
src/django_saas/core/services/: bootstrap_service.py  disc_manager.py  frontend_service.py  idioma_service.py  traducao_service.py  traducao_sinc_service.py  user_service.py
src/django_saas/lang/: enus.py  ptpt.py
src/django_saas/migrations/: 0001_initial.py  0002_rename_is_verified_user_is_verified_email_and_more.py
src/django_saas/models/: __init__.py  audit_log.py  documento.py  endereco.py  entidade.py  entidade_group.py  entidade_grupo.py  entidade_modelo.py  entidade_modulo.py  entidade_user.py  ficheiro.py  front_end.py  idioma.py  input.py  input_string.py  modelo_extra.py  modulo.py  pessoa.py  string.py  sucursal.py  sucursal_group.py  sucursal_user.py  sucursal_user_group.py  tipo_entidade.py  tipo_entidade_group.py  tipo_entidade_modelo.py  tipo_entidade_modulo.py  traducao.py  user.py  user_login.py
src/mytech_rest_auth.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rh/: __init__.py  admin.py  apps.py  sidebar.py  urls.py
(+118 files in other folders)
